# 2026_Graduation

./: .gitignore  README.md  complex_command_improvement.md
src/: SmartRobot.py  get_rep.py  global_vars.py
src - 副本/agent/: react_agent.py
src - 副本/skills/: map.py
src - 副本/temp/: llm_test.py  nav_tcp_bridge_temp.py
src/agent/: prompt.py  react_agent.py
src/go2_ros2_toolbox_division_llm/: README_zh.md  go2_slam_ninelab.yaml  命令.txt
src/go2_ros2_toolbox_division_llm/go2_core/: QUICK_START.md  USAGE_GUIDE.md
src/go2_ros2_toolbox_division_llm/go2_core/launch/: go2_localization_nav.launch.py  go2_mapping.launch.py
src/go2_ros2_toolbox_division_llm/go2_llm/: CMakeLists.txt  package.xml
src/go2_ros2_toolbox_division_llm/go2_llm/go2_llm/: __init__.py  main.py
src/go2_ros2_toolbox_division_llm/go2_llm/go2_llm/agent/: prompt.py  react_agent.py
src/go2_ros2_toolbox_division_llm/go2_llm/go2_llm/skills/: __init__.py  map.py  skill_executor.py  skill_manager.py
src/go2_ros2_toolbox_division_llm/go2_llm/go2_llm/utils/: state.py  tf_pose_provider.py
src/go2_ros2_toolbox_division_llm/go2_navigation/: CMakeLists.txt
src/go2_ros2_toolbox_division_llm/go2_navigation/config/: nav2_division.yaml  nav2_params copy.yaml
src/go2_ros2_toolbox_division_llm/go2_navigation/go2_navigation/: navigation_command_tcpbridge.py
src/go2_ros2_toolbox_division_llm/go2_navigation/launch/: go2_nav2.launch.py
src/go2_ros2_toolbox_division_llm/go2_slam/config/: mapper_params_online_async.yaml  mapper_params_online_slam.yaml
src/go2_ros2_toolbox_division_llm/go2_slam/launch/: go2_slamtoolbox.launch.py  map_sever.launch.py
src/go2_ros2_toolbox_division_llm/install/: local_setup.sh  setup.sh
src/go2_ros2_toolbox_division_llm/install/go2_core/lib/go2_core/: go2_base
src/go2_ros2_toolbox_division_llm/install/go2_core/share/go2_core/: package.sh
src/go2_ros2_toolbox_division_llm/install/go2_h264_repub/lib/go2_h264_repub/: go2_h264_repub
src/go2_ros2_toolbox_division_llm/install/go2_h264_repub/share/go2_h264_repub/: package.sh
src/go2_ros2_toolbox_division_llm/install/go2_llm/lib/go2_llm/: main.py
src/go2_ros2_toolbox_division_llm/install/go2_llm/share/go2_llm/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/go2_ros2_toolbox_division_llm/install/go2_navigation/share/go2_navigation/: local_setup.sh  (+3 more)
src/go2_ros2_toolbox_division_llm/log/: latest_build
src/go2_ros2_toolbox_division_llm/pc_voice/: bridge_client.py  main.py  requirements.txt  whisper_asr.py
src/go2_ros2_toolbox_division_llm/pc_voice/config/: pc_voice.yaml
src/go2_ros2_toolbox_division_llm/quadruped_llm_system/: package.xml  setup.cfg  setup.py
src/go2_ros2_toolbox_division_llm/quadruped_llm_system/config/: destinations.yaml  runtime.yaml
src/go2_ros2_toolbox_division_llm/quadruped_llm_system/launch/: quadruped_llm_system.launch.py  quadruped_llm_system_voice.launch.py
src/go2_ros2_toolbox_division_llm/quadruped_llm_system/quadruped_llm_system/cognition/: destination_registry.py  dialogue_router_node.py  llm_client.py  memory_store.py  place_repository.py
src/go2_ros2_toolbox_division_llm/quadruped_llm_system/quadruped_llm_system/common/: config.py  events.py  ros_json_topic.py
src/go2_ros2_toolbox_division_llm/quadruped_llm_system/quadruped_llm_system/execution/: nav_controller_node.py
src/go2_ros2_toolbox_division_llm/quadruped_llm_system/quadruped_llm_system/interaction/: response_generator_node.py  text_bridge_node.py  text_input_node.py
src/go2_ros2_toolbox_division_llm/quadruped_llm_system/quadruped_llm_system/robot_interface/: nav_goal_relay_node.py  speaker_bridge_node.py
src/go2_ros2_toolbox_division_llm/quadruped_llm_system/resource/: quadruped_llm_system
src/skills/: skill_executor.py  skill_manager.py
src/temp/: nav_tcp_bridge_temp.py  skills_test.py
src/utils/: llm.py  state.py  tf_pose_provider.py  whisper_asr.py
src_ROS/: README.md
src_ROS/smartrobot_agent_controller/: package.xml  setup.cfg  setup.py
src_ROS/smartrobot_agent_controller/resource/: smartrobot_agent_controller
src_ROS/smartrobot_agent_controller/smartrobot_agent_controller/: __init__.py  agent_controller.py  llm.py  prompt.py
src_ROS/smartrobot_agent_node/: CMakeLists.txt  package.xml
src_ROS/smartrobot_agent_node/smartrobot_agent_node/: agent_node.py  prompt.py
src_ROS/smartrobot_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src_ROS/smartrobot_bringup/launch/: smartrobot_pipeline.launch.py
src_ROS/smartrobot_bringup/resource/: smartrobot_bringup
src_ROS/smartrobot_bringup/smartrobot_bringup/: pipeline.py
src_ROS/smartrobot_place_memory/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src_ROS/smartrobot_place_memory/resource/: smartrobot_place_memory
src_ROS/smartrobot_place_memory/smartrobot_place_memory/: place_memory.py
src_ROS/smartrobot_skill_controller/: package.xml  setup.cfg  setup.py
src_ROS/smartrobot_skill_controller/resource/: smartrobot_skill_controller
src_ROS/smartrobot_skill_controller/smartrobot_skill_controller/: __init__.py  skill_controller.py  skill_executor.py  skill_manager.py
src_ROS/smartrobot_skills_node/: CMakeLists.txt  package.xml
src_ROS/smartrobot_skills_node/smartrobot_skills_node/: skill_executor.py  skill_manager.py  skills_node.py
src_ROS/smartrobot_state_client/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src_ROS/smartrobot_state_client/resource/: smartrobot_state_client
src_ROS/smartrobot_state_client/smartrobot_state_client/: state_reader.py
src_ROS/smartrobot_voice_input/: package.xml  setup.cfg  setup.py
src_ROS/smartrobot_voice_input/resource/: smartrobot_voice_input
src_ROS/smartrobot_voice_input/smartrobot_voice_input/: __init__.py  voice_input.py  whisper_asr.py
src_ROS/smartrobot_voice_node/: CMakeLists.txt  package.xml
src_ROS/smartrobot_voice_node/smartrobot_voice_node/: voice_node.py  whisper_asr.py
src_old/: SmartRobot.py
src_old/agent/: prompt.py  react_agent.py
src_old/skills/: skill_executor.py  skill_manager.py
src_old/temp/: get_rep.py
(+21 files in other folders)
