<?xml version="1.0"?>
<package format="3">
  <name>smartrobot_agent_node</name>
  <version>0.0.1</version>
  <description>Agent and llm decision node for SmartRobot.</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>python3</exec_depend>
</package>
