<?xml version="1.0"?>
<package format="3">
  <name>smartrobot_bringup</name>
  <version>0.0.1</version>
  <description>Pipeline wiring for voice to llm to skills.</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>rclpy</exec_depend>
</package>
