<?xml version="1.0"?>
<package format="3">
  <name>smartrobot_bringup</name>
  <version>0.0.1</version>
  <description>SmartRobot 从输入到决策再到技能执行的流程编排入口。</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>smartrobot_agent_controller</exec_depend>
  <exec_depend>smartrobot_place_memory</exec_depend>
  <exec_depend>smartrobot_skill_controller</exec_depend>
  <exec_depend>smartrobot_state_client</exec_depend>
  <exec_depend>smartrobot_voice_input</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
