<?xml version="1.0"?>
<package format="3">
  <name>smartrobot_state_client</name>
  <version>0.0.1</version>
  <description>State reader library for global pose topic.</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
