<?xml version="1.0"?>
<package format="3">
  <name>smartrobot_voice_input</name>
  <version>0.0.1</version>
  <description>SmartRobot 的语音和文本输入组件。</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
