<?xml version="1.0"?>
<package format="3">
  <name>quadruped_llm_system</name>
  <version>0.1.0</version>
  <description>Embodied LLM system for quadruped robots with voice-navigation workflow.</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
